--- a/INP_project/src/main/webapp/index.html
+++ b/INP_project/src/main/webapp/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE HTML>
-
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Spectra1212 by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<h1>아저씨</h1>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 
-     
 	<body class="landing is-preload">
-	<h1>dfdf</h1>
+		
 	
 		
 		<top1 class="top1">
@@ -49,7 +53,7 @@
 							<div id="page-wrapper">
 								<div class="bg">
 									<video muted autoplay loop width="">
-									  <source src="./images/video.mp4" type="video/mp4">
+									  <source src="../html5up-spectral/assets/css/images/video.mp4" type="video/mp4">
 									</video>
 									<div class="text">
 									  <p></p>
