--- a/INP_project/src/main/webapp/index.html
+++ b/INP_project/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<h1>아저씨</h1>
+		<h1>김대욱</h1>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 
