--- a/INP_project/src/main/webapp/index.html
+++ b/INP_project/src/main/webapp/index.html
@@ -13,10 +13,11 @@
 		
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-
-	<body class="landing is-preload">
 		
 	
+	<body class="landing is-preload">
+		
+	<h1>하이이이이이이이</h1>
 		
 		<top1 class="top1">
 			<div></div>
