--- a/INP_project/src/main/webapp/index.html
+++ b/INP_project/src/main/webapp/index.html
@@ -11,6 +11,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
 />
+<div style="width: 2000px;">
 
  
   
@@ -266,6 +267,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+	</div>
 	</body>
 </html>
