이전, 다음 버튼 추가

--- a/INP_project/src/main/webapp/person.html
+++ b/INP_project/src/main/webapp/person.html
@@ -80,6 +80,9 @@
 		</tr>
 
 	</table>
-
+	<center>
+		<button type="button" >이전</button>
+		<button type="button" >다음</button>
+	</center>
 </body>
 </html>
