--- a/INP_project/src/main/webapp/spot.html
+++ b/INP_project/src/main/webapp/spot.html
@@ -73,7 +73,10 @@
 
 	</table>
 		
-
+	<center>
+		<button type="button" >이전</button>
+		<button type="button" >다음</button>
+	</center>
 
 </body>
 </html>
